name:                hmatrix-morpheus
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/alexander-ignatyev/morpheus
license:             BSD3
license-file:        LICENSE
author:              Alexander Ignatyev
maintainer:          ignatyev.alexander@gmail.com
copyright:           Alexander Ignatyev
category:            math
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      hmatrix-morpheus/src
  exposed-modules:     Numeric
  build-depends:       base >= 4.7 && < 5
                     , hmatrix
  default-language:    Haskell2010


test-suite hmatrix-morpheus-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      hmatrix-morpheus/test
  main-is:             Main.hs
  build-depends:       base
                     , hmatrix-morpheus
                     , MonadRandom >= 0.4.2.3
                     , test-framework >= 0.8.1.1
                     , test-framework-hunit >= 0.3.0.2
                     , test-framework-quickcheck2 >= 0.3.0.3
                     , HUnit >= 1.3.1.1
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/alexander-ignatyev/hmatrix
